[package]
name = "rn"
version = "0.1.0"
authors = ["Markus Akesson <macke.95_06@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
snafu = "0.4.4"
serde_yaml = "0.8.9"
serde = { version = "1.0.99", features = ["derive"] }
